--- a/Carnivores 2.vcxproj
+++ b/Carnivores 2.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Audio.cpp" />
     <ClCompile Include="Characters.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Hunt2.cpp" />
@@ -137,6 +138,7 @@
     <ClCompile Include="Resources.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Audio.h" />
     <ClInclude Include="eax.h" />
     <ClInclude Include="Hunt.h" />
     <ClInclude Include="resource.h" />
